# BullsEye_Trader

./: .coveragerc  .cz.yaml  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile_api  LICENSE  README.md  api.py  docker-compose.yaml  main.py  mypy.ini  pyproject.toml  requirements.txt  services.env  setup.cfg  setup.py  start_system.sh  tox.ini
.github/workflows/: tests.yaml
fed_crawler/: Dockerfile_api  api.py  docker-compose.yaml  init.sql  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
fed_crawler/fed_crawler/: .coveragerc  requirements.txt
fed_crawler/fed_crawler/src/: __init__.py  db_helpers.py  fed_crawler.py
fed_crawler/fed_crawler/tests/: test_fed_crawler.py
fed_crawler/src/: __init__.py  fed_crawler.py
fed_crawler/tests/: test_fed_crawler.py
tests/: test_api.py
yfin_scraper/: Dockerfile_api  api.py  docker-compose.yaml  requirements.txt
yfin_scraper/yfin_scraper/: setup.cfg
yfin_scraper/yfin_scraper/src/: __init__.py
