[metadata]
name = bullseye_trader
description = stock trading app that copies congressional trading
author = Alex Stet
license = MIT
license_file = LICENSE
platforms = linux, win64
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12

[options]
packages =
    bullseye_trader
install_requirements =
    requirements.txt
python_requires = >=3.12
package_dir =
    =.
zip_safe = no

[options.extras_require]
testing =
    requirements_dev.txt

[options.package_data]
bullseye_trader = py.typed
