[metadata]
name = fed_crawler
description = stock trading app that copies congressional trading
author = Alex Stet
platforms = linux, win64
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12

[options]
packages =
    src
install_requirements =
    requirements.txt
python_requires = >=3.12
package_dir =
    =.
zip_safe = no

[options.extras_require]
testing =
    requirements_dev.txt

[options.package_data]
fed_crawler = py.typed
