[metadata]
name = yfin_scraper
description = A basic Yahoo! Finance scraper
author = Alex Stet
platforms = linux, win64
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12

[options]
packages =
    src
install_requirements =
    requirements.txt
python_requires = >=3.12
package_dir =
    =.
zip_safe = no

[options.extras_require]
testing =
    requirements_dev.txt

[options.package_data]
yfin_scraper = py.typed
